<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >


    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@mipmap/img_normal"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:visibility="gone"
        />

    <LinearLayout
        android:id="@+id/detect_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:visibility="gone"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/detect_name_1"
                android:text="@string/detect_item_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textSize="@dimen/main_text_size_20"
                android:textColor="@color/main_title"
                />
            <TextView
                android:text=" 9%"
                android:id="@+id/detect_value_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/main_text_size_20"
                android:textColor="@color/main_title"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/detect_name_2"
                android:text="@string/detect_item_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textSize="@dimen/main_text_size_20"
                android:textColor="@color/main_title"
                />
            <TextView
                android:text=" 9%"
                android:id="@+id/detect_value_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/main_text_size_20"
                android:textColor="@color/main_title"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/detect_name_3"
                android:text="@string/detect_item_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textSize="@dimen/main_text_size_20"
                android:textColor="@color/main_title"
                />
            <TextView
                android:text=" 9%"
                android:id="@+id/detect_value_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/main_text_size_20"
                android:textColor="@color/main_title"
                />
        </LinearLayout>

    </LinearLayout>





</RelativeLayout>